<resources>
    <string name="app_name">RentBike</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">RentBike - Usuario</string>

    <string name="title_stations">Estaciones</string>
    <string name="title_rents">Alquileres</string>
    <string name="title_incidents">Incidencias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mock_text">Mock Text</string>
    <string name="title_activity_main_op">RentBike - Operador</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="registerTitle_text">Registro de Usuario</string>
    <string name="register_email_label">Email:</string>
    <string name="register_password_label">Password:</string>
    <string name="register_firstName_label">Nombres:</string>
    <string name="register_lastName_label">Apellidos:</string>
    <string name="register_address_label">Dirección:</string>
    <string name="register_phone_label">Nro. Célular:</string>
    <string name="Female">Femenino:</string>
    <string name="Male">Másculino:</string>
    <string name="register_gender_label">Genero:</string>
    <string name="register_birthday_label">Fec. Nacimiento:</string>
    <string name="register_DNI_label">DNI:</string>
    <string name="register_register_button">Registrar</string>

</resources>
